# securesnap

./: .gitignore
certs/: extract_public_key.js  self_signed_CA.key  self_signed_CA.pem
client/: get_encrypted_server_response.py  key_exchange.py  send_encrypted_auth_token.py
security-attacks/: .gitignore  README.md  pyproject.toml  replay_attack.py  sniff_client_request.py  sniff_server_response.py
